additional tests added